--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <option value"7">7</option>
                 <option value"8">8</option>
             </select>
-            <label for="">Childern</label>
+            <label for="">Children</label>
             <select id="child" name="child">
                 <option value"1">1</option>
                 <option value"2">2</option>
